feat: AlmaLinux install script + separate SELinux hardening script
Two scripts under scripts/, both idempotent and both supporting --dry-run.

install-almalinux.sh installs Java, optionally PostgreSQL, creates the service
account and directory layout, writes the environment file with a generated
database password, installs the systemd unit, starts the service and waits on
its health endpoint.

It does not configure a reverse proxy. That is a separate concern with its own
decisions -- nginx vs haproxy, certificate source, WebSocket timeouts, the
SameSite gotcha -- and frontend.md already covers it. The script leaves the app
on 127.0.0.1:8080, which is what you want in front of a proxy, and says so at the
end rather than leaving you to wonder why nothing answers on the public address.

It also does not install Keycloak. A production IdP needs its own database,
hostname and TLS, and most sites already have one; --import-realm loads the
bundled realm into an existing Keycloak over kcadm if that helps.

selinux-harden.sh is separate because SELinux is the layer whose failures are
invisible where you look for them: a denial lands in the audit log, not in
journalctl -u, so the symptom is a failed upload with a clean service log. It
labels the data tree with an fcontext rule (so the label survives a relabel, not
just a restorecon), optionally labels a listen port, and leaves
httpd_can_network_connect alone unless you pass --with-proxy -- that boolean is
host-wide, not scoped to this service, which is worth knowing before setting it.

Verified rather than assumed:

- The generated unit passes systemd-analyze verify and scores 4.6 OK. Its
  directive set is now identical to the one documented in the README, checked by
  diffing the two.
- Adding ProcSubset and RestrictAddressFamilies closed the gap between my first
  draft (5.1 MEDIUM) and the documented unit.

Two documentation errors found by writing the scripts:

- README claimed "8080 is fine; 9090, 8443 etc. are not" for